--- a/b4.html
+++ b/b4.html
@@ -8,6 +8,39 @@
 
 </body>
 </html>
+<script>
+    let sum = 1
+    let i =3
+    while (i <= 22) {
+        sum = sum * i
+        i++
+        document.write(sum + "<br>")
+
+
+
+    }
+
+</script>
+<!--<script>-->
+<!--    let sum = 1-->
+<!--    let i = 3-->
+<!--    for (; i <=22; i++ ) {-->
+<!--        sum = sum * i-->
+<!--        document.write(sum + "<br>")-->
+<!--    }-->
+
+<!--</script>-->
+
+<!--<script>-->
+<!--    let sum = 0-->
+<!--    let i = 3-->
+<!--    do {-->
+<!--        i = i +1-->
+<!--        sum = sum + i-->
+
+<!--    } while (i <= 22)-->
+<!--    document.write(sum + "<br>")-->
+<!--</script>-->
 <!--<script>-->
 <!--    let sum = 0-->
 <!--    let i = 3-->
